--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,8 @@ strong {
 /* 答题页面样式 */
 #testContainer {
     display: none;
+    opacity: 0;
+    transition: 0.1s opacity;
     /* 
     display: flex;
     flex-direction: column;
@@ -75,6 +77,17 @@ strong {
 
 #controlArea {
     margin: 5% 2% 26% 2%;
+}
+
+#loadingTip {
+    opacity: 1;
+    transition: 0.1s opacity;
+}
+
+#questionnaireList {
+    display: none;
+    opacity: 0;
+    transition: 0.1s opacity;
 }
 
 a {
