--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ strong {
 
 /* 答题页面样式 */
 #testContainer {
+    margin: 8px;
     display: none;
     opacity: 0;
     transition: 0.1s opacity;
@@ -84,7 +85,7 @@ strong {
     transition: 0.1s opacity;
 }
 
-#questionnaireList {
+#listContent {
     display: none;
     opacity: 0;
     transition: 0.1s opacity;
@@ -107,7 +108,6 @@ strong {
 }
 
 #resultArea {
-    margin-top: 3%;
     display: none;
 }
 
