--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ strong {
 }
 
 #controlArea {
-    margin: 5% 2% 26% 2%;
+    margin: 5% 2% 22% 2%;
 }
 
 #loadingTip {
@@ -160,11 +160,18 @@ strong {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 2%;
+    margin-bottom: 10px;
 }
 
 .progress-bar {
     margin-left: 10px;
+}
+
+.tip-card {
+    margin-bottom: 15px;
+    padding: 15px;
+    display: flex;
+    align-items: center;
 }
 
 .center {
