--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 body {
     opacity: 0;
     height: 100%;
-    margin: 8px;
+    margin: 0;
 }
 
 body.ready {
@@ -15,6 +15,7 @@ h5 {
     font-size: var(--mdui-typescale-headline-medium-size);
     letter-spacing: var(--mdui-typescale-headline-medium-tracking);
     font-weight: var(--mdui-typescale-headline-medium-weight);
+    margin: 0;
 }
 
 p {
@@ -74,7 +75,7 @@ mdui-list-subheader {
 
 /* 充满页面 */
 mdui-layout {
-    height: calc(100vh - 17px);
+    height: 100vh;
 }
 
 mdui-list-item {
@@ -89,6 +90,14 @@ mdui-badge {
 
 mdui-radio {
     width: 100%;
+}
+
+mdui-top-app-bar {
+    padding: 1rem 0.9rem;
+}
+
+mdui-navigation-rail {
+    padding: 1rem 0.9rem;
 }
 
 .items-container {
@@ -115,9 +124,8 @@ mdui-radio {
 }
 
 /* 页面描述 */
-.questionnaire-description {
-    /*  */
-    margin-bottom: 2px;
+#questionnaireDescription {
+    margin: 1rem 0 1rem 0;
 }
 
 /* 页面提示 */
@@ -141,7 +149,7 @@ mdui-radio {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .progress-bar {
@@ -149,7 +157,7 @@ mdui-radio {
 }
 
 .tip-card {
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
     padding: 15px;
     display: flex;
     align-items: center;
@@ -163,6 +171,10 @@ mdui-radio {
     line-height: var(--mdui-typescale-body-large-line-height);
     font-size: var(--mdui-typescale-body-large-size);
     letter-spacing: var(--mdui-typescale-body-large-tracking);
+}
+
+mdui-divider {
+    margin: 1rem 0 1rem 0;
 }
 
 .red {
@@ -195,7 +207,7 @@ mdui-radio {
 }
 
 #controlArea {
-    margin: 5% 2% 22% 2%;
+    margin: 3rem 1rem 5rem 1rem;
 }
 
 #loadingTip {
@@ -207,6 +219,11 @@ mdui-radio {
     display: none;
     opacity: 0;
     transition: 0.1s opacity;
+}
+
+#searchBar {
+    width: calc(100% - 16px);
+    margin: 8px 8px 0 8px;
 }
 
 #nullTip {
