--- a/src/index.css
+++ b/src/index.css
@@ -96,8 +96,13 @@ mdui-top-app-bar {
     padding: 1rem 0.9rem;
 }
 
+mdui-top-app-bar[scrolling] {
+    background-color: rgb(var(--mdui-color-surface-container-low)) !important;
+    box-shadow: 0 0 0;
+}
+
 mdui-navigation-rail {
-    padding: 1rem 0.9rem;
+    background-color: rgb(var(--mdui-color-surface-container-low));
 }
 
 .items-container {
