--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -32,11 +32,11 @@ mdui-layout {
     height: 100vh;
 }
 
-mdui-layout-main {
+/* mdui-layout-main {
     padding-left: 1rem !important;
     padding-right: 1rem !important;
     padding-bottom: 1rem !important;
-}
+} */
 
 /* 导航栏、标题栏及背景颜色 */
 mdui-top-app-bar {
